--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CS6001L-Homework)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(CS6001L-Homework main.cpp mygraph.h)
+add_executable(CS6001L-Homework main.cpp mygraph.h mycsv.h)
